# ubuntu_vpn_indicator

./: Readme.md  app.py  get_status.py  main.py  main.spec  pyproject.toml  qt_app.py
app/: get_icon.py  get_status.py  pyside_app.py  pystray_app.py  qt_app.py
