[tool.poetry]
name = "ubuntu-vpn-indicator"
version = "0.1.0"
description = ""
authors = ["RomanchenkoAS <RomanchenkoAS@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.5"
black = "^23.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
