[tool.poetry]
name = "ubuntu-vpn-indicator"
version = "0.1.0"
description = "System tray VPN indicator for NordlayerVPN."
authors = ["RomanchenkoAS <RomanchenkoAS@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.5"

[tool.poetry.dev-dependencies]
black = "^23.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[build-system.poetry]
virtualenvs-in-project = true